# dq-comp

./: README.md
autotest/: dq-autotest-req-spec.md  run-all.sh
autotest/atrunner/: CMakeLists.txt  at_runner.cpp  at_runner.h  atr_options.cpp  atr_options.h  atr_version.h  atrun_objects.h  main_atrunner.cpp  strparse.cpp  strparse.h  testfile.cpp  testfile.h  testfileworker.cpp
autotest/tests/: sample_combined.dq  test1.dq
compiler/: CMakeLists.txt
compiler/ast/: comp_symbols.cpp  comp_symbols.h  dq_module.h  dqc_ast.cpp  dqc_ast.h  expressions.cpp  expressions.h  statements.cpp  statements.h  symbols.cpp  symbols.h
compiler/builtins/: scope_builtins.cpp  scope_builtins.h  scope_defines.h
compiler/codegen/: dqc_codegen.cpp  dqc_codegen.h  ll_defs.cpp  ll_defs.h
compiler/parser/: dqc_parser.cpp  dqc_parser.h  scf_base.cpp  scf_base.h  scf_dq.cpp  scf_dq.h
compiler/src/: comp_config.h  comp_defines.cpp  comp_defines.h  comp_options.cpp  comp_options.h  comp_symbols.cpp  comp_symbols.h  dq_module.cpp  dq_module.h  dqc.cpp  dqc.h  dqc_ast.cpp  dqc_ast.h  dqc_base.cpp  dqc_base.h  dqc_clargs.cpp  dqc_clargs.h  dqc_codegen.cpp  dqc_codegen.h  dqc_parser.cpp  dqc_parser.h  errorcodes.h  ll_defs.cpp  ll_defs.h  main_dq_comp.cpp  otype_bool.cpp  otype_bool.h  otype_func.cpp  otype_func.h  otype_int.cpp  otype_int.h  scf_base.cpp  scf_base.h  scf_dq.cpp  scf_dq.h  scope_builtins.cpp  scope_builtins.h  scope_defines.cpp  scope_defines.h  scope_module.cpp  (+4 more)
compiler/src_test/: test_symbols.cpp  testcode.cpp  testcode.h
compiler/types/: otype_array.cpp  otype_bool.cpp  otype_bool.h  otype_cstring.cpp  otype_float.cpp  otype_func.cpp  otype_func.h  otype_int.cpp  otype_int.h
tests/basic/: dq_basic1.dq
tests/preprocessor/: dq_preproc_test1.dq
(+47 files in other folders)
